# dolby-encoding-engine

./: LICENSE  README.md
plugins/: BUILDING.md  CMakeLists.txt
plugins/code/: CMakeLists.txt  build_plugins.py  readme.txt
plugins/code/api/: CMakeLists.txt
plugins/code/api/hevc_enc/: CMakeLists.txt  hevc_enc_api.h
plugins/code/api/image_transformer/: CMakeLists.txt  image_transformer_api.h
plugins/code/api/j2k_dec/: CMakeLists.txt  j2k_dec_api.h
plugins/code/api/pcm_watermarker/: CMakeLists.txt  pcm_watermarker_api.h
plugins/code/api/prores_dec/: CMakeLists.txt  prores_dec_api.h
plugins/code/api/tiff_dec/: CMakeLists.txt  tiff_dec_api.h
plugins/code/common/: CMakeLists.txt  common.h
plugins/code/common/Common/: CMakeLists.txt
plugins/code/common/Debugger/: CMakeLists.txt  plugins_debugger.h
plugins/code/common/GenericPlugin/: GenericPlugin.cpp  GenericPlugin.h
plugins/code/common/PipingManager/: PipingManager.cpp  PipingManager.h
plugins/code/common/SystemCalls/: SystemCalls.cpp  SystemCalls.h
plugins/code/hevc_dec/: hevc_dec_api.h  hevc_dec_common.cpp  hevc_dec_common.h
plugins/code/hevc_dec/beamr/: README.md
plugins/code/hevc_dec/beamr/src/: hevc_dec_beamr.cpp  hevc_dec_beamr_impl.cpp  hevc_dec_beamr_impl.h  hevc_dec_beamr_utils.cpp  hevc_dec_beamr_utils.h
plugins/code/hevc_dec/ffmpeg/: readme.txt
plugins/code/hevc_dec/ffmpeg/examples/: example_profile_4_2.xml  example_profile_8_2.xml  example_transcode_to_hevc.xml
plugins/code/hevc_dec/ffmpeg/scripts/: cmd_gen_ffmpeg_decode.py  cmd_gen_hevc_dec_ffmpeg.py
plugins/code/hevc_dec/ffmpeg/src/: NamedPipe.cpp  NamedPipe.h  hevc_dec_ffmpeg.cpp  hevc_dec_ffmpeg_utils.cpp  hevc_dec_ffmpeg_utils.h
plugins/code/hevc_enc/: CMakeLists.txt  hevc_enc_api.h
plugins/code/hevc_enc/beamr/: CMakeLists.txt  README.md
plugins/code/hevc_enc/beamr/cmake/: beamrConfig.cmake
plugins/code/hevc_enc/beamr/examples/: example_dv_mezz_to_hdr10.xml  example_dv_mezz_to_sdr.xml  example_encode_to_hevc.xml  example_profile_4_2.xml  example_profile_5.xml  example_profile_8_1.xml  example_transcode_to_hevc.xml
plugins/code/hevc_enc/beamr/src/: CMakeLists.txt  hevc_enc_beamr.cpp  hevc_enc_beamr_impl.cpp  hevc_enc_beamr_impl.h  hevc_enc_beamr_utils.cpp  hevc_enc_beamr_utils.h
plugins/code/hevc_enc/ffmpeg/: example.xml  readme.txt
plugins/code/hevc_enc/ffmpeg/examples/: example_profile_4_2.xml  example_profile_5.xml  example_profile_8_1.xml  example_transcode_to_hevc.xml
plugins/code/hevc_enc/ffmpeg/examples/user_params_json_examples/: example_profile_4_2.json  example_profile_5.json  example_profile_8_1.json  example_profile_transcode_to_hevc.json
plugins/code/hevc_enc/ffmpeg/scripts/: cmd_gen_hevc_enc_ffmpeg.py  cmd_gen_x265.py
plugins/code/hevc_enc/ffmpeg/src/: NamedPipe.cpp  NamedPipe.h  hevc_enc_ffmpeg.cpp  hevc_enc_ffmpeg_utils.cpp  hevc_enc_ffmpeg_utils.h
plugins/code/hevc_enc/x265/: CMakeLists.txt  README.md  example.xml  readme.txt
plugins/code/hevc_enc/x265/cmake/: x265Config.cmake
plugins/code/hevc_enc/x265/examples/: example_dv_mezz_to_hdr10.xml  example_dv_mezz_to_sdr.xml  example_encode_to_hevc.xml  example_profile_4_2.xml  example_profile_5.xml  example_profile_8_1.xml  example_transcode_to_hevc.xml
plugins/code/hevc_enc/x265/src/: CMakeLists.txt  hevc_enc_x265.cpp  hevc_enc_x265_utils.cpp  hevc_enc_x265_utils.h
plugins/code/image_transformer/: CMakeLists.txt
plugins/code/image_transformer/dummy/: CMakeLists.txt
plugins/code/image_transformer/dummy/src/: CMakeLists.txt  image_transformer_dummy.cpp
plugins/code/j2k_dec/: CMakeLists.txt  j2k_dec_api.h
plugins/code/j2k_dec/comprimato/: readme.txt
plugins/code/j2k_dec/comprimato/src/: j2k_dec_comprimato.cpp  j2k_dec_comprimato.h  j2k_dec_comprimato_plugin.cpp
plugins/code/j2k_dec/ffmpeg/: readme.txt
plugins/code/j2k_dec/ffmpeg/src/: j2k_dec_ffmpeg.cpp
plugins/code/j2k_dec/kakadu/: CMakeLists.txt  README.md  readme.txt
plugins/code/j2k_dec/kakadu/cmake/: kakaduConfig.cmake
plugins/code/j2k_dec/kakadu/make/: mbuild_constraints.txt
plugins/code/j2k_dec/kakadu/src/: CMakeLists.txt  j2k_dec_kakadu.cpp  j2k_dec_kakadu.h  j2k_dec_kakadu_plugin.cpp
plugins/code/noise/: noise_api.h  noise_flt_api.h
plugins/code/noise/noise_example/: readme.txt
plugins/code/noise/noise_example/src/: noise_example.cpp
plugins/code/prores_dec/: ProresDecPlugin.h  proresDecApiWrapper.cpp  proresDecApiWrapper.h  proresDecPluginWrapper.cpp  proresDecPluginWrapper.h  prores_dec_api.cpp  prores_dec_api.h
plugins/code/prores_dec/apple/: readme.txt
plugins/code/prores_dec/apple/src/: ProresDecApple.cpp
plugins/code/scaling/: scaling_api.h  scaling_flt_api.h
plugins/code/scaling/scaling_example/: readme.txt
plugins/code/scaling/scaling_example/src/: scaling_example.cpp
plugins/code/tiff_dec/: CMakeLists.txt  README.md  tiff_dec_api.h
plugins/code/tiff_dec/libtiff/: CMakeLists.txt  readme.txt
plugins/code/tiff_dec/libtiff/cmake/: TIFFConfig.cmake
plugins/code/tiff_dec/libtiff/src/: CMakeLists.txt  tiff_dec_libtiff.cpp
plugins/common/: common.h
plugins/hevc_enc/ffmpeg/: example.xml
plugins/hevc_enc/ffmpeg/make/hevc_enc_ffmpeg/linux_amd64_gnu/: Makefile
plugins/hevc_enc/ffmpeg/make/hevc_enc_ffmpeg/windows_amd64_msvs/: hevc_enc_ffmpeg_2013.vcxproj  hevc_enc_ffmpeg_2013.vcxproj.filters
plugins/hevc_enc/ffmpeg/src/: hevc_enc_ffmpeg.cpp
plugins/hevc_enc/x265/make/hevc_enc_x265/windows_amd64_msvs/: hevc_enc_x265_2013.vcxproj
plugins/hevc_enc/x265/src/: hevc_enc_x265.cpp  hevc_enc_x265_utils.cpp
plugins/j2k_dec/ffmpeg/make/j2k_dec_ffmpeg/windows_amd64_msvs/: j2k_dec_ffmpeg_2013.sln  j2k_dec_ffmpeg_2013.vcxproj
plugins/j2k_dec/kakadu/make/j2k_dec_kakadu/linux_amd64_gnu/: Makefile
plugins/j2k_dec/kakadu/make/j2k_dec_kakadu/windows_amd64_msvs/: j2k_dec_kakadu_2013.sln  j2k_dec_kakadu_2013.vcxproj
plugins/j2k_dec/kakadu/src/: j2k_dec_kakadu.cpp
plugins/noise/noise_example/make/noise_example/linux_amd64_gnu/: Makefile
plugins/noise/noise_example/src/: noise_example.cpp
(+74 files in other folders)
